--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -37,4 +37,5 @@
   }
 }
 
-.signUpForm {display: inline-grid;}
+.signUpForm {display: inline-grid;} */
+
