added more style and to the navbar

--- a/src/customStyle.scss
+++ b/src/customStyle.scss
@@ -12,6 +12,10 @@ nav {
     font-size: 20px;
     margin: 0 5px;
   }
+  .navUserWelcome {
+    float: right!important;
+    margin-right: 50px;
+  }
 }
 
 
