starting to set up new categories creation form and such

--- a/src/customStyle.scss
+++ b/src/customStyle.scss
@@ -36,3 +36,7 @@ nav {
   label {display: inline-block;}
 }
 .saveBet {margin-top: 10px!important;}
+.newCausesTxt {
+  width: 500px; margin-top: 10px;
+  h5 {margin-bottom: 10px;}
+}
