added a modal and logic for create new main and sub causes state. good reset point for trying to abstract new causes to its own component

--- a/src/customStyle.scss
+++ b/src/customStyle.scss
@@ -17,10 +17,13 @@ nav {
     margin-right: 50px;
   }
 }
-
+.cardTitle {font-size: 17px;}
+li.MuiListItem-root {padding-top: 2px; padding-bottom: 2px;}
+.counts_line {font-size: 11px; margin-top: -5px;}
 
 // home page
 .betCard {margin: 10px;}
+
 
 // login page
 .loginBoxInner {margin: 10px 0 15px 20px;}
